--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <header>
     <div class="logo"><strong>Webroot Guide</strong></div>
     <nav>
-        <a href="https://aclogportal.com/totalav-login" target="_blank">Login</a>
+        <a href="https://aclogportal.com/webroot-login" target="_blank">Login</a>
         <a href="https://activation-key.net" target="_blank">Activate</a>
         <a href="https://accuratelivechat.com" target="_blank">Support</a>
     </nav>
@@ -148,7 +148,7 @@
     <h2>Step 3: Login or Sign In to Webroot Account</h2>
     <p>Now that Webroot is installed, here's how to <strong>login</strong> or <strong>sign in</strong> to your account:</p>
     <ol>
-        <li>Go to the official Webroot login page (or use a trusted link such as <a href="https://aclogportal.com/totalav-login" target="_blank">this login portal</a>).</li>
+        <li>Go to the official Webroot login page (or use a trusted link such as <a href="https://aclogportal.com/webroot-login" target="_blank">this login portal</a>).</li>
         <li>Click on <strong>Sign In</strong> at the top-right corner.</li>
         <li>Enter your registered email address and password.</li>
         <li>Click <strong>Login</strong> to access your Webroot dashboard.</li>
@@ -179,5 +179,46 @@
     <h2>Webroot Customer Support and Customer Service</h2>
     <p>If the login process or software still isn’t working, Webroot has excellent <strong>customer service</strong> options:</p>
     <ul>
-        <li><strong>Live Chat:</strong> Use <a href="https://accuratelivechat.com" target="_blank">accuratelivechat.com</a> for instant help.</li>
+        <li><strong>Live Chat:</strong> Use <a href="https://accuratelivechat.com" target="_blank">Support</a> for instant help.</li>
+        <li><strong>Phone Support:</strong> Call Webroot customer service from their official support page.</li>
+        <li><strong>Email Support:</strong> Email their team with your issue for a detailed response.</li>
+        <li><strong>Knowledge Base:</strong> Access guides, FAQs, and troubleshooting steps.</li>
+    </ul>
+
+    <div class="btn-group">
+        <a class="btn-link" href="https://aclogportal.com/webroot-login" target="_blank">Login to Webroot</a>
+        <a class="btn-link" href="https://activation-key.net" target="_blank">Activate Webroot</a>
+        <a class="btn-link" href="https://accuratelivechat.com" target="_blank">Customer Support</a>
+    </div>
+
+    <h2>Best Practices for Managing Your Webroot Account</h2>
+    <ul>
+        <li>Always use a strong and unique password for your Webroot login.</li>
+        <li>Update your software regularly to avoid compatibility issues.</li>
+        <li>Enable two-factor authentication (2FA) if available for extra security.</li>
+        <li>Keep your activation key and login credentials backed up securely.</li>
+    </ul>
+
+    <h2>Webroot Mobile App Login</h2>
+    <p>You can also <strong>login</strong> to your Webroot account via their mobile apps for Android and iOS. Use the same credentials to access your dashboard, scan devices, and adjust settings from your phone.</p>
+
+    <h2>Conclusion</h2>
+    <p>Successfully logging in to your Webroot account ensures that your devices remain protected with one of the most powerful cybersecurity tools available today. From downloading and installing the software to troubleshooting common issues and contacting <strong>customer care</strong>, this guide is your all-in-one solution. Make sure to save your credentials securely, keep your software updated, and don’t hesitate to reach out to <strong>Webroot support</strong> if you ever need assistance.</p>
+
+    <p>Still need help? Use one of the links below to get instant assistance:</p>
+
+    <div class="btn-group">
+        <a class="btn-link" href="https://aclogportal.com/webroot-login" target="_blank">Login</a>
+        <a class="btn-link" href="https://activation-key.net" target="_blank">Activate</a>
+        <a class="btn-link" href="https://accuratelivechat.com" target="_blank">Support</a>
+    </div>
+
+</main>
+
+<footer>
+    &copy; 2025 Webroot Login Guide. All rights reserved. | Contact Customer Service 24/7
+</footer>
+
+</body>
+</html>
        
